# opus

./: .gitignore  CHANGELOG.md  README.md  cabal.project  default.nix  flake.nix  opus.cabal  scheme.cabal
.github/workflows/: deploy.yml
.helix/: languages.toml
app/: Eval.hs  Main.hs  Parser.hs  Prim.hs  SExpr.hs
cli/: cli.cabal
cli/src/: Main.hs
core/: core.cabal
core/data/: prelude.op
core/src/: Opus.hs  Prim.hs  SExpr.hs
data/: prelude.op
lib/: Eval.hs  Opus.hs  Parser.hs  Prim.hs
test/: fib.op  fib.py
wasm/: Main.hs  wasm.cabal
wasm/src/: Main.hs
www/: .gitignore  deno.json  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
www/public/: opus.wasm
www/src/: App.svelte  App.tsx  index.css  opus.ts  opus_exports.js  readline.ts
www/src/components/: Editor.tsx  Terminal.tsx
www/src/lib/: Editor.svelte  Terminal.svelte  opus.ts  opus_exports.js  readline.ts
