cabal-version:      3.0
name:               opus-core
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Fay Ash
maintainer:         yaoshiu@qq.com
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
extra-source-files: data/prelude.op

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  SExpr,
                      Parser,
                      Eval,
                      Prim,
                      Opus
    build-depends:    base >=4.14 && <5,
                    file-embed,
                    template-haskell,
                    megaparsec,
                    text,
                    containers,
                    mtl
    hs-source-dirs:   src
    default-language: Haskell2010
