cabal-version:      3.0
name:               opus-wasm
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Fay Ash
maintainer:         yaoshiu@qq.com
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
extra-source-files: data/prelude.op

common warnings
    ghc-options: -Wall

executable opus-wasm
  import: warnings
  main-is: Main.hs
  build-depends: base >= 4.14 && < 5,
    opus-core,
    text,
    containers,
    ghc-experimental
  hs-source-dirs: src
  default-language: Haskell2010
  if arch(wasm32)
    ghc-options:
      -no-hs-main
      -O2
      -optc-O3
      -optl-mexec-model=reactor
      -optl-Wl,--export=hs_init

      -optl-Wl,--export=init_env 
      -optl-Wl,--export=hs_free
      -- -optl-Wl,--export=eval
      -optl-Wl,--export=render
